# stackaudit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
stackaudit/: cli.py  reporter.py  scorer.py
stackaudit/auditors/: __init__.py  base.py  deps.py  docs.py  quality.py  security.py  structure.py  testing.py
tests/: conftest.py  test_docs.py  test_quality.py  test_scorer.py  test_security.py  test_testing.py
