[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackaudit"
version = "0.1.0"
description = "CLI tool to audit project health and generate a scored report card"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.scripts]
stackaudit = "stackaudit.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=stackaudit --cov-report=term-missing"
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.setuptools.packages.find]
where = ["."]
include = ["stackaudit*"]

